syntax = "proto3";
package chessproto;

option go_package = "./chesspb";

message Ping {
}

message Join {
	bool player = 1;
}

message NewGame {
}

message Move {
	uint32 fx = 1; // from x
	uint32 fy = 2; // from y
	uint32 tx = 3; // to x
	uint32 ty = 4; // to y
	enum MoveType {
		RegularMove = 0;
		EnPassant = 1;
		CastleLeft = 2;
		CastleRight = 3;
	}
	MoveType   moveType = 5;
}

message Error {
	string msg = 1;
}

message Team {
	bool black = 1;
}

message Player {
	bool One = 1;
}

message OpponentLeft {
}

message OpponentJoined {
}

message Promote {
	uint32 x = 1; // x
	uint32 y = 2; // y
	int32 to = 3; // specify piece to promote to
}

message GameComplete {
	enum Result {
		Stalemate = 0;
		BlackWin = 1;
		WhiteWin = 2;
	}
	Result   result = 1;
}
